# toy-robot

./: .env.example  .gitignore  .markdownlint.yaml  .pre-commit-config.yaml  Dockerfile  README.md  pyproject.toml  run_robot.py
.github/workflows/: deploy.yml  docker-build.yml  linting.yml  tests.yml
app/: __init__.py  auth.py  config.py  enhancement_processor.py  main.py
infra/: .terraform.lock.hcl  github.tf  iam.tf  main.tf  terraform.tf  variables.tf
tests/: __init__.py  test_main.py
