[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[dependency-groups]
dev = [
    "pre-commit>=4.0.1,<5",
    "pytest-httpx>=0.35.0,<0.36",
    "pytest>=8.3.4,<9",
    "ruff>=0.8.6,<0.9",
]

[project]
authors = [{email = "jack@covidence.org", name = "Jack Walmisley"}]
dependencies = [
    "destiny-sdk>=0.2.0,<0.3",
    "fastapi[standard]>=0.115.6,<0.116",
    "pydantic-settings>=2.7.1,<3",
    "pytest-env>=1.1.5,<2",
]
description = "Example robot for producing toy enhancements against destiny repo"
name = "toy-robot"
readme = "README.md"
requires-python = "~=3.13"
version = "0.2.0"

[tool.mypy]
explicit_package_bases = true
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
addopts = ["--color=yes", "--import-mode=importlib", "--verbose"]
env = [
    "ENV=local",
]
pythonpath = "."
testpaths = ["tests"]

[tool.ruff]
extend-exclude = ["app/migrations/versions/*.py", "docs/*.py"]
fix = true
force-exclude = true
target-version = "py312"
lint.ignore = [
    "COM812", # trailing commas (ruff-format recommended)
    "D203", # no-blank-line-before-class
    "D212", # multi-line-summary-first-line
    "D407", # removed dashes lines under sections
    "D417", # argument description in docstring (unreliable)
    "FIX002", # implicit trust that TODOs are not trivial, or else they would be fixed
    "ISC001", # simplify implicit str concatenation (ruff-format recommended)
]
lint.per-file-ignores = {"tests*" = [
    "ANN201", # No return type annotation. It's always None for tests.
    "INP001", # File is part of an implicit namespace package.
    "PLR2004", # Magic value used in comparison
    "S101", # Use of `assert` detected
]}
lint.select = ["ALL"]
lint.mccabe.max-complexity = 18
lint.pep8-naming.classmethod-decorators = ["classmethod"]

[tool.tomlsort]
all = true
spaces_indent_inline_array = 4
trailing_comma_inline_array = true
overrides."project.classifiers".inline_arrays = false
overrides."tool.coverage.paths.source".inline_arrays = false

[tool.uv]
package = false
